@@ -6,6 +6,9 @@ You can also easily add songs in the rhythmFiles game since the program reads in
 To get started, head to the releases tab on the right and download the jar file of the latest release. 
 Run the jar file, and everything else should work. 
 
+If you want to build and compile the program yourself, you'll need a download of javafx. Once downloaded, you will need to run the program with the 
+following VM arguments: --module-path <path-to-your-javafx-lib-folder> --add-modules=javafx.controls,javafx.fxml,javafx.media
+
 https://github.com/donk3665/MinigameRefactor/assets/78714224/9add9b79-c047-427e-b2c8-013ae18b0088
 
 https://github.com/donk3665/MinigameRefactor/assets/78714224/778a1c9a-fed7-428a-8fe7-9a5b27964ea5
